<resources>
    <string name="app_name">ElWhats</string>
    <string name="create_new_account">Create A New Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="welcome_to_elwhatsapp">Welcome To ElWhatsApp</string>
    <string name="create_a_new_account">Create A New Account</string>
    <string name="already_have_an_account">Already Have An Account</string>
    <string name="login_to_elwhatsapp">Login To ElWhatsApp</string>
    <string name="login">Login</string>
    <string name="sign_out">Sign Out</string>
    <string name="type_a_message">Type A Message…</string>
    <string name="send_button">Send Button</string>
    <string name="profile">Profile</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
</resources>