<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.activities.StartActivity">

    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_elwhatsapp"
        android:layout_centerInParent="true"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_margin="@dimen/_16sdp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_tv"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/create_a_new_account"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_btn"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/colorPrimaryDark"
        android:backgroundTint="@android:color/white"/>

</RelativeLayout>