<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MessagesActivity"
    android:background="#E6E6E6">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:id="@+id/app_bar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/message_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:background="@color/colorPrimaryDark">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/message_profile_img"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@mipmap/ic_person"/>

            <TextView
                android:id="@+id/message_username_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_marginStart="@dimen/_18sdp"
                android:textColor="#FFF"
                android:textStyle="bold"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messages_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar"
        android:layout_above="@id/rl"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/receiver_item"/>

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/message_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="@dimen/_10sdp"
            android:hint="@string/type_a_message"
            android:inputType="textMultiLine"
            android:importantForAutofill="no"
            android:layout_toStartOf="@id/send_fab"
            android:layout_marginEnd="@dimen/_4sdp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/send_fab"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/_4sdp"
            android:contentDescription="@string/send_button"
            android:src="@drawable/ic_baseline_send_24"
            app:fabCustomSize="48dp"/>

    </RelativeLayout>

</RelativeLayout>